Generate problems and one solution.
This also introduces the state machine as, basically,
applying one class to the whole document
and showing/hiding everything else with CSS

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <script type="module" src="./main.js"></script>
     <!-- GH pages assumes this, but it's useful for testing locally. -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h1>Problem: <span id="problem"></span></h1>
     <div id="problem-controls">
       <button class="spin">↻</button>
       <button class="ok">✓</button>
+    </div>
+    <div id="solution-spinner">
+      <h1>Solution: <span id="solution"></span></h1>
     </div>
   </body>
 </html>
