--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <h1>Problem: <span id="problem"></span></h1>
     <div id="problem-controls">
       <button class="spin">↻</button>
-      <button class="ok">✓</button>
+      <button class="ok">✅</button>
     </div>
     <div id="solution-spinner">
       <h1>Solution: <span id="solution"></span></h1>
+      <div id="solution-controls">
+        <button class="no">❌</button>
+        <button class="ok">✅</button>
+      </div>
     </div>
   </body>
 </html>
