Implement countdown while choosing solutions.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <button class="ok">✅</button>
       </div>
     </div>
+    <h2 id="countdown-container">Time left: <span id="countdown"></span></div>
   </body>
 </html>
