Set a global state class.
This is roughly what we're doing already, but this change adds one for
'uninitialized' so we can display a warning, and a convenient method for
replacing the entire class list.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
+  <body id="uninit">
+    <div id="js-warning">
+      <h1>Loading...</h1>
+      <p>
+        This should load effectively instantaneously.
+        If you're still reading this, something has likely gone wrong
+        with either the JavaScript or the CSS.
+        You will have to come up with your own terrible ideas!
+      </p>
+    </div>
     <h1>Problem: <span id="problem"></span></h1>
     <div id="problem-controls">
       <button class="spin">↻</button>
