--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         <button class="ok">✅</button>
       </div>
     </div>
-    <h2 id="countdown-container">Time left: <span id="countdown"></span></div>
+    <h2 id="countdown-container">Time left: <span id="countdown"></span></h2>
   </body>
 </html>
