Display accepted and rejected solutions as we go.

--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
       </div>
     </div>
     <h2 id="countdown-container">Time left: <span id="countdown"></span></h2>
+    <div id="solution-lists">
+      <div id="rejected-solutions" class="solution-list">
+        <h3>Rejected solutions</h3>
+        <ul></ul>
+      </div>
+      <div id="accepted-solutions" class="solution-list">
+        <h3>Accepted solutions</h3>
+        <ul></ul>
+      </div>
+    </div>
   </body>
 </html>
