Display the solution (with name) when done.

--- a/index.html
+++ b/index.html
@@ -48,5 +48,12 @@
       </p>
       <h1>Solution: <span class="solution"></span></h1>
     </div>
+    <form id="name-input-form">
+      <h1><label for="name-input">Give this product a name:</label> <input id="name-input"> <button type="submit">✅</button></h1>
+    </form>
+    <div id="solution-with-name">
+      <h1>Solution: <span id="solution-name"></span></h1>
+      <h2 id="solution-description"></h2>
+    </div>
   </body>
 </html>
