Spiced up the presentation-mode format a bit.
(I mean, it's still not going to be pretty, but...

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         You will have to come up with your own terrible ideas!
       </p>
     </div>
-    <h1>Problem: <span id="problem"></span></h1>
+    <h1 id="problem-line">Problem: <span class="problem"></span></h1>
     <div id="problem-controls">
       <button class="spin">↻</button>
       <button class="ok">✅</button>
@@ -51,8 +51,9 @@
     <form id="name-input-form">
       <h1><label for="name-input">Give this product a name:</label> <input id="name-input"> <button type="submit">✅</button></h1>
     </form>
-    <div id="solution-with-name">
-      <h1>Solution: <span id="solution-name"></span></h1>
+    <div id="presentation-mode">
+      <h1><span class="problem"></span>?</h1>
+      <h1>Introducing: <span id="solution-name"></span></h1>
       <h2 id="solution-description"></h2>
     </div>
   </body>
