Add summary page.
Button doesn't work yet.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <button class="ok">✅</button>
       </div>
     </div>
-    <h2 id="countdown-container">Time left: <span id="countdown"></span></h2>
     <div id="solution-lists">
       <div id="rejected-solutions" class="solution-list">
         <h3>Rejected solutions</h3>
@@ -56,5 +55,15 @@
       <h1>Introducing: <span id="solution-name"></span></h1>
       <h2 id="solution-description"></h2>
     </div>
+    <div id="summary">
+      <h2><button id="new-solution">Generate another solution</button></h2>
+      <p>
+        (You can refresh the page to forget all solutions,
+        and start over with a new problem)
+      </p>
+      <h2>Solutions so far:</h2>
+      <ul id="solution-list"></ul>
+    </div>
+    <h2 id="countdown-container">Time left: <span id="countdown"></span></h2>
   </body>
 </html>
