Add an "end presentation" button.
I doubt anyone will want to stop the solution spinner early,
but they may just run out of things to say in the presentation.

--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
       <ul id="solution-list"></ul>
     </div>
     <h2 id="countdown-container">Time left: <span id="countdown"></span></h2>
+    <button id="finish-presentation">I'm done talking 🖐🎤⬇️</button>
   </body>
 </html>
