--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1>Solution: <span class="solution"></span></h1>
     </div>
     <form id="name-input-form">
-      <h1><label for="name-input">Give this product a name:</label> <input id="name-input"> <button type="submit">✅</button></h1>
+      <h1><label for="name-input">Give this product a name:</label> <input id="name-input" autocomplete="off"> <button type="submit">✅</button></h1>
     </form>
     <div id="presentation-mode">
       <h1><span class="problem"></span>?</h1>
