Add a "start over" button

--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
     </div>
     <div id="summary">
       <h2><button id="new-solution">Generate another solution</button></h2>
-      <p>
-        (You can refresh the page to forget all solutions,
-        and start over with a new problem)
-      </p>
+      <h2><button id="start-over">Start over with a new problem</button></h2>
       <h2>Solutions so far:</h2>
       <ul id="solution-list"></ul>
     </div>
