Made things a tiny bit visually clearer

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     </div>
     <h1 id="problem-line">Problem: <span class="problem"></span></h1>
     <div id="problem-controls">
+      <p>Is this the problem we should try to solve?</p>
       <button class="spin">↻</button>
       <button class="ok">✅</button>
     </div>
     <div id="solution-spinner">
+      <hr>
       <h1>Solution: <span class="solution"></span></h1>
       <div id="solution-controls">
         <button class="no">❌</button>
@@ -40,7 +42,7 @@
       </div>
     </div>
     <div id="solution-locked">
-      <p class="explanation match-found">Aww, you found a match!</p>
+      <p class="explanation match-found">It's a match!</p>
       <p class="explanation no-match">
         You are too picky! Since you didn't accept <i>any</i> solutions,
         here's one you rejected:
