Add additional slides

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
       <h1><label for="name-input">Give this product a name:</label> <input id="name-input" autocomplete="off"> <button type="submit">✅</button></h1>
     </form>
     <div id="presentation-mode">
-      <h1><span class="problem"></span>?</h1>
-      <h1>Introducing: <span id="solution-name"></span></h1>
+      <button id="start-presentation">Start presentation ▶️</button>
+      <h1 class="problem-row"><span class="problem"></span>?</h1>
+      <h1 class="solution-row">Introducing: <span id="solution-name"></span></h1>
       <h2 id="solution-description"></h2>
+      <button id="next-slide">Next Slide ➡️</button>
     </div>
     <div id="summary">
       <h2><button id="new-solution">Generate another solution</button></h2>
